@@ -9,6 +9,7 @@ Version 6.6.3 - not yet released
   - LX: support Nano firmware 2.10 (#2819)
 * Android
   - fix compatibility issue with Android 2.2
+  - detect when internal GPS is lost on Android 2.3 and older (#2929)
 * user interface
   - fix unit display for pressure in flight setup dialog (#2933)
 * data files
